@@ -1,5 +1,12 @@
 2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Minor packaging fix.
+
+	* benchmarks/blas/Makefile.am: Also distribute the benchmarking
+	templates and `blasbench.h'.
+
+2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Fix bug in BLAS benchmarks.
 
 	* benchmarks/blas/templates/bench-xrot.c: Properly read array
